# saebench-gaming-env

./: .dockerignore  .gitattributes  .gitignore  Dockerfile.hud  README.md  env.py  env_with_tasks.py  pyproject.toml  scoring.py  tasks.py
_template/: README.md
_template/data_pipeline/: task.py
_template/research_audit/: task.py
_template/structured_output/: task.py
cases/sae_heist/: gt_directions.npy  s_label.npy  sae_W_dec.npy  sae_W_enc.npy  sae_meta.json  synth_acts.npy  t_label.npy  trained_W_dec.npy  trained_W_enc.npy  trained_meta.json
cases/wafer_cold_start/: README.md
cases/wafer_kda_diag/: bench.json  bench.py  chunk.py  fla_brief.md  grid_estimate.txt  hardware.txt  profile_table.txt  trace.json
cases/wafer_nvfp4_silu_audit/: field_guide.md  speedup_table.md
rl-training/: common.py  simple_train.py
saebench_audit/: __init__.py
saebench_audit/diagnostic/: __init__.py  degraded.py  perfect_oracle.py
saebench_audit/runners/: __init__.py  run_all.py  sae_compat.py
saebench_audit/saes/: matryoshka_sae.py
saebench_audit/synthetic/: __init__.py  data_gen.py  eval_sae_probes.py  eval_scr.py  run_eval.py
saebench_audit/training/: train_cross_arch.py  train_sampled_matryoshka.py
tasks/: __init__.py
tasks/city_mapping_audit/: task.py
tasks/mxbai_projection_dim_cliff/: task.py
tasks/mxbai_projection_layer_choice/: task.py
tasks/mxbai_reranker_teacher_diag/: task.py
tasks/nmoe_0006_study/: task.py  (+1 more)
tools/: gen_data.py  local_test.py  run_many.py  save_panel_sae.py  search_loop.py  task1_test.py  toy_check.py  train_sae.py
(+866 files in other folders)
