[project]
name = "ml-triage-tasks"
version = "0.1.0"
description = "HUD environment for diagnosing ML/CI failures from scraped artefact bundles"
requires-python = ">=3.11"
dependencies = [
    "hud-python",
    "numpy<2.0",
    "openai>=1.40",
    "sae-bench>=0.5.0",
    "sae-lens>=6.44.3",
    "scipy>=1.17.1",
    "torch>=2.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["env.py"]

[tool.hatch.build.targets.wheel.force-include]
"env.py" = "env.py"
